--- a/app/src/main/res/layout/fragment_my_order.xml
+++ b/app/src/main/res/layout/fragment_my_order.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/stateItemFragment"
+        android:id="@+id/stateItemDetails"
         android:layout_width="42dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -47,7 +47,7 @@
         app:layout_constraintStart_toEndOf="@+id/stateTextView" />
 
     <TextView
-        android:id="@+id/quantityItemFragment"
+        android:id="@+id/quantityDileveryDetail"
         android:layout_width="106dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
-        android:id="@+id/pickUpDateFragment"
+        android:id="@+id/pickUpDateDetails"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
