--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -143,15 +143,16 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
-                android:layout_marginLeft="48dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginLeft="28dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="8dp"
                 android:text="Total Cost :"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/stateItemDetails"
-                app:layout_constraintTop_toBottomOf="@+id/quantityDileveryDetail" />
+                app:layout_constraintTop_toBottomOf="@+id/quantityDileveryDetail"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/totalPriceDetails"
@@ -159,7 +160,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginLeft="4dp"
-                android:layout_marginTop="72dp"
+                android:layout_marginTop="70dp"
                 android:layout_marginBottom="8dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
