--- a/app/src/main/res/layout/activity_user_donations.xml
+++ b/app/src/main/res/layout/activity_user_donations.xml
@@ -33,12 +33,12 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="24dp"
-                android:fontFamily="cursive"
+                android:fontFamily="sans-serif-condensed"
                 android:gravity="center_horizontal"
                 android:text="My Donations"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="45dp"
+                android:textSize="40dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
